added sort of a quiz or questionnaire piece to apptest

--- a/public/apptest.html
+++ b/public/apptest.html
@@ -13,6 +13,10 @@
             <li><a href="#/page1">Page 1</a></li>
             <li><a href="#/page2">Page 2</a></li>
             <li><a href="#/page3">Page 3</a></li>
+            <li><a href="#/first_visit_type">first_visit_type</a></li>
+            <li><a href="#/first_without_radioplathy">first_without_radioplathy</a></li>
+            <li><a href="#/first_with_radioplathy">first_with_radioplathy</a></li>
+            <li><a href="#/end">end</a></li>
             <li><a href="#/unknown">Test Unknown path</a></li>
         </ul>
     </nav>
@@ -23,9 +27,9 @@
 <footer>
     <p>Special thanks to <a href="https://github.com/bchociej/apptest/">Ben</a></p>
 </footer>
-
+<script src="/js/lib/lodash.min.js"></script>
 <script src="/js/corner.min.js"></script>
-<script src="/js/rlite.min.js"></script>
+<script src="/js/rlite.js"></script>
 <script src="/js/reqwest.min.js"></script>
 <script src="/js/apptest.js"></script>
 </body>
