--- a/public/webcam/index.html
+++ b/public/webcam/index.html
@@ -43,14 +43,9 @@
                 style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>
     </div>
 
-    <p>Draw a frame from the video onto the canvas element using the <code>drawImage()</code> method.</p>
-
-    <p>The variables <code>canvas</code>, <code>video</code> and <code>stream</code> are in global scope, so you can inspect them from the console.</p>
-
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="adapter.js"></script>
 <script src="main.js"></script>
-
 </body>
 </html>
